# ai-bake-off-fashnary

./: .docker-test.sh  .gitignore  DATABASE_SCHEMA.md  README.md  api.py  cloudbuild.yaml  docker-compose.yml  product_database.json  product_utils.py  pyproject.toml
backend/: .dockerignore  Dockerfile  api.py  api_test.py  api_test.sh  cloudbuild.yaml  product_utils.py  requirements.txt  utils.py
backend/db/: init.sql  users_database.json
backend/templates/: index.html
db/: product_database.json  users_database.json
docs/: API_GUIDE.md  INSTALLATION.md  TESTING_GUIDE.md
frontend/: .dockerignore  .env  Dockerfile  cloudbuild.yaml  jest.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.test.tsx  page.tsx
frontend/src/app/users/[id]/: page.tsx
frontend/src/components/: ProductCard.tsx  TryOnDisplay.test.tsx  TryOnDisplay.tsx
frontend/src/types/: product.ts  user.ts
game_setup/: README.md  config.py  generate_products_db.py  generate_users.py  images.py  pyproject.toml  python-test-backend.py  update_image_paths.py  update_uuids.py  vertex-imagen-test.py
